--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
